examples/test/testpolicy6788.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6788
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key1: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value0
          key14: value3
          key12: value15
      podSelector:
        matchLabels:
          key37: value1
